--- a/JSON Downloading Into PickerView/Base.lproj/Main.storyboard
+++ b/JSON Downloading Into PickerView/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="JSON_Downloading_Into_PickerView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,94 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xTZ-ZB-1pA">
+                                <rect key="frame" x="0.0" y="427" width="375" height="240"/>
+                                <subviews>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yyU-zw-GbL">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="JEw-aA-KLH"/>
+                                        </constraints>
+                                        <items>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="Vcz-p1-5Se"/>
+                                            <barButtonItem title="Select" id="9BT-Kc-4ph">
+                                                <connections>
+                                                    <action selector="btn_SelectItems:" destination="BYZ-38-t0r" id="nV6-EI-ary"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                    </toolbar>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVl-4X-uSQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="240"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="dI4-Wm-xYy"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="rBL-P9-10K"/>
+                                        </connections>
+                                    </pickerView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="aVl-4X-uSQ" secondAttribute="bottom" id="03A-bt-OZ8"/>
+                                    <constraint firstAttribute="trailing" secondItem="aVl-4X-uSQ" secondAttribute="trailing" id="11H-nj-s84"/>
+                                    <constraint firstItem="aVl-4X-uSQ" firstAttribute="top" secondItem="xTZ-ZB-1pA" secondAttribute="top" id="6ZP-5u-tuh"/>
+                                    <constraint firstItem="yyU-zw-GbL" firstAttribute="top" secondItem="xTZ-ZB-1pA" secondAttribute="top" id="8Xc-hU-mcG"/>
+                                    <constraint firstAttribute="height" constant="240" id="9Qq-PJ-3dq"/>
+                                    <constraint firstItem="aVl-4X-uSQ" firstAttribute="leading" secondItem="xTZ-ZB-1pA" secondAttribute="leading" id="hch-Yt-ln7"/>
+                                    <constraint firstAttribute="trailing" secondItem="yyU-zw-GbL" secondAttribute="trailing" id="iQ2-jc-A24"/>
+                                    <constraint firstItem="yyU-zw-GbL" firstAttribute="leading" secondItem="xTZ-ZB-1pA" secondAttribute="leading" id="nQT-mz-N1N"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zbc-6k-ZcC">
+                                <rect key="frame" x="116" y="133" width="143" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Choose Day of Week"/>
+                                <connections>
+                                    <action selector="btn_ChooseDays:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gTs-PC-fEx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MAM-he-2n3">
+                                <rect key="frame" x="116" y="182" width="143" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Choose Location"/>
+                                <connections>
+                                    <action selector="btn_ChooseLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8qy-8F-cGl"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="A9v-8V-Tm9">
+                                <rect key="frame" x="267" y="143" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="d39-hs-QGx">
+                                <rect key="frame" x="267" y="187" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qk4-QC-l17">
+                                <rect key="frame" x="116" y="270" width="171" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xTZ-ZB-1pA" secondAttribute="trailing" id="4FC-VX-47b"/>
+                            <constraint firstItem="xTZ-ZB-1pA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="M4A-CE-a0z"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xTZ-ZB-1pA" secondAttribute="bottom" id="t6U-Lv-Lmh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activity1" destination="A9v-8V-Tm9" id="Lxh-Ch-6ml"/>
+                        <outlet property="activity2" destination="d39-hs-QGx" id="MCT-9G-7Tc"/>
+                        <outlet property="lbl_ShowSelectItem" destination="Qk4-QC-l17" id="W4l-dj-Jjl"/>
+                        <outlet property="view_ContainerView" destination="xTZ-ZB-1pA" id="H2P-YH-1fJ"/>
+                        <outlet property="view_PickerView" destination="aVl-4X-uSQ" id="ljG-Aj-bT5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-100" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
